added new bubble chart html and js

--- a/bubblechart.html
+++ b/bubblechart.html
@@ -10,7 +10,7 @@
 <script src="js/bubblechart.js"></script>
 
 <style>
-	body { font-size: 12px; }
+	body { font-size: 13px; }
 	g.nationGroup circle { fill-opacity: 0.6; stroke: #000; stroke-width: 0.5px; }
 </style>
 
@@ -32,7 +32,7 @@ embed this HTML from here....
 <div  id="bubbleChartContainer" style="position: relative;">
 
 	<h2 class="sectionTitle">Per capita income vs. electricity consumption, 2010</h2>	
-	<p style="text-align: center;">Source: World Bank. Circles are proportional to each nation's population.</p>
+	<p style="text-align: center;">Source: World Bank. Circles are proportional to each nation's population and color coded by region.</p>
 
 
 	<div id ="bubbleChart" style="height: 500px;">	
