--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@ embed this HTML from here....
 
 	<div id = "clickOverlay" style="
 		position: absolute;
-    width: 100%; height: auto;
+    width: 40%; height: auto;
     background-color: rgba(255,255,255,0.8);
     text-align: center;
     top: 120px;
     padding: 1em 2.5%;
-    margin: 0px;
+    margin: 0px 30%;
+    cursor: pointer;
     font-style: italic;
     font-size: 18px;
     font-weight: 800; ">
