Click to play version for Fig 7 chart

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ embed this HTML from here....
 ======================= 
 -->
 
-	<div id ="chart" style="width: 100%; height: 800px;">	
+	<div id ="chart" style="width: 100%; height: 800px; padding-top: 0px;">	
 		
 	</div>
 
@@ -37,10 +37,13 @@ embed this HTML from here....
 	<div id = "clickOverlay" style="
 		position: absolute;
     width: 40%; height: auto;
-    background-color: rgba(255,255,255,0.8);
+    background-color: rgba(222,45,38,0.8);
+    border-bottom: 2px solid rgb(200,0,0);
+
+    color: #fff;
     text-align: center;
-    top: 120px;
-    padding: 1em 2.5%;
+    top: 140px;
+    padding: 0.5em 2.5%;
     margin: 0px 30%;
     cursor: pointer;
     font-style: italic;
