Animated bubble chart files

--- a/bubblechart.html
+++ b/bubblechart.html
@@ -19,36 +19,25 @@
 <body>
 
 
+<div id ="bubbleChart" style="height: 500px; ">	</div>
 
+<div id = "clickOverlay" style="
+		position: absolute;
+    width: 40%; height: auto;
+    background-color: rgba(222,45,38,0.8);
+    border-bottom: 2px solid rgb(200,0,0);
 
-
-
-<!-- 
-=======================
-embed this HTML from here....
-======================= 
--->
-
-<div  id="bubbleChartContainer" style="position: relative;">
-
-	<h2 class="sectionTitle">Per capita income vs. electricity consumption, 2010</h2>	
-	<p style="text-align: center;">Source: World Bank. Circles are proportional to each nation's population and color coded by region.</p>
-
-
-	<div id ="bubbleChart" style="height: 500px;">	
-		
-	</div>
-
-
-
-</div> <!--  end of div#bubbleChartContainer -->
-
-
-<!-- 
-=======================
-to here.
-======================= 
--->
+    color: #fff;
+    text-align: center;
+    top: 20px;
+    padding: 0.5em 2.5%;
+    margin: 0px 30%;
+    cursor: pointer;
+    font-style: italic;
+    font-size: 18px;
+    font-weight: 800; ">
+		Click to animate
+</div>
 
 
 
