--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <script src="js/d3.v5.js"></script>
 
 <link rel="stylesheet" type="text/css" href="css/style.css" />
+<link rel="stylesheet" type="text/css" href="https://www.rockefellerfoundation.org/app/themes/rockefeller/assets/dist/css/all.min-1bb36aef.css" />
 
 <script src="js/chart.js"></script>
 
@@ -37,8 +38,9 @@ embed this HTML from here....
 	<div id = "clickOverlay" style="
 		position: absolute;
     width: 40%; height: auto;
-    background-color: rgba(222,45,38,0.8);
-    border-bottom: 2px solid rgb(200,0,0);
+    background-color: #F6343F;
+    box-shadow: 1px 2px 2px rgb(100,0,0);
+   
 
     color: #fff;
     text-align: center;
@@ -46,10 +48,9 @@ embed this HTML from here....
     padding: 0.5em 2.5%;
     margin: 0px 30%;
     cursor: pointer;
-    font-style: italic;
     font-size: 18px;
     font-weight: 800; ">
-		Click to animate
+		PLAY ▶
 	</div>
 
 
