--- a/bubblechart.html
+++ b/bubblechart.html
@@ -6,12 +6,13 @@
 <script src="js/d3.v5.js"></script>
 
 <link rel="stylesheet" type="text/css" href="css/style.css" />
+<link rel="stylesheet" type="text/css" href="https://www.rockefellerfoundation.org/app/themes/rockefeller/assets/dist/css/all.min-1bb36aef.css" />
 
 <script src="js/bubblechart.js"></script>
 
 <style>
-	body { font-size: 13px; }
-	g.nationGroup circle { fill-opacity: 0.6; stroke: #000; stroke-width: 0.5px; }
+	body { font-size: 11px; }
+	g.nationGroup circle { stroke: #000; stroke-width: 0.5px; }
 </style>
 
 
@@ -24,20 +25,21 @@
 <div id = "clickOverlay" style="
 		position: absolute;
     width: 40%; height: auto;
-    background-color: rgba(222,45,38,0.8);
-    border-bottom: 2px solid rgb(200,0,0);
+    background-color: #F6343F;
+    box-shadow: 1px 2px 2px rgb(100,0,0);
+   	
 
     color: #fff;
     text-align: center;
-    top: 20px;
-    padding: 0.5em 2.5%;
+    top: 80px;
+    padding: 0.2em 2.5%;
     margin: 0px 30%;
     cursor: pointer;
-    font-style: italic;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 800; ">
-		Click to animate
-</div>
+		PLAY ▶
+	</div>
+
 
 
 
